--- a/app/src/main/res/layout/edit_shop.xml
+++ b/app/src/main/res/layout/edit_shop.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
             android:fontFamily="@font/lato"
-            android:hint="Nama Toko"
+            android:hint="@string/nama_toko"
             android:inputType="textPersonName"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
             android:fontFamily="@font/lato"
-            android:hint="Alamat"
+            android:hint="@string/alamat"
             android:inputType="none"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
             android:fontFamily="@font/lato"
-            android:hint="Nama Pemilik"
+            android:hint="@string/nama_pemilik"
             android:inputType="textPersonName"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
             android:fontFamily="@font/lato"
-            android:hint="Nomor Telepon"
+            android:hint="@string/nomor_telepon"
             android:inputType="phone"
             android:maxLines="1"
             android:textColor="@color/black"
