--- a/app/src/main/res/layout/fragment_add_category.xml
+++ b/app/src/main/res/layout/fragment_add_category.xml
@@ -27,9 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
-            android:hint="Kategori Nama Produk"
+            android:hint="@string/kategori_nama_produk"
             android:inputType="text"
-            android:maxLines="1" />
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -39,6 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_background"
-        android:text="Tambah Kategori" />
+        android:text="@string/tambah_kategori" />
 
 </LinearLayout>
