--- a/app/src/main/res/layout/fragment_add_product_in_deposit.xml
+++ b/app/src/main/res/layout/fragment_add_product_in_deposit.xml
@@ -7,90 +7,91 @@
 
     </data>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/_16sdp"
+        android:paddingTop="@dimen/_16sdp"
+        android:paddingEnd="@dimen/_16sdp"
+        android:paddingBottom="@dimen/_16sdp"
+        tools:context=".ui.deposit.AddProductInDepositFragment">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:hint="@string/pilih_produk">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextViewProduct"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/roboto"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_16sdp"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etJumlahBarang"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/item_background"
+                android:fontFamily="@font/roboto"
+                android:hint="@string/jumlah_produk"
+                android:inputType="number"
+                android:singleLine="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnTambahProduk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:background="@drawable/custom_button_background_selector"
+            android:fontFamily="@font/lato"
             android:paddingStart="@dimen/_16sdp"
-            android:paddingTop="@dimen/_16sdp"
+            android:paddingTop="@dimen/_8sdp"
             android:paddingEnd="@dimen/_16sdp"
-            android:paddingBottom="@dimen/_16sdp"
-            tools:context=".ui.deposit.AddProductInDepositFragment">
+            android:paddingBottom="@dimen/_8sdp"
+            android:text="@string/tambah_produk"
+            android:textColor="@color/white" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_16sdp"
-                android:hint="Pilih Produk">
+        <Button
+            android:id="@+id/btnSimpanProduk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:background="@drawable/custom_button_background_selector"
+            android:fontFamily="@font/lato"
+            android:paddingStart="@dimen/_16sdp"
+            android:paddingTop="@dimen/_8sdp"
+            android:paddingEnd="@dimen/_16sdp"
+            android:paddingBottom="@dimen/_8sdp"
+            android:text="@string/simpan_produk"
+            android:textColor="@color/white" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/autoCompleteTextViewProduct"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/roboto"
-                    android:inputType="none" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_productInDeposit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            tools:listitem="@layout/item_product_in_deposit" />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_16sdp"
-                app:boxStrokeWidth="0dp"
-                app:boxStrokeWidthFocused="0dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etJumlahBarang"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/item_background"
-                    android:fontFamily="@font/roboto"
-                    android:hint="Jumlah Barang"
-                    android:inputType="number" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/btnTambahProduk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:background="@drawable/custom_button_background_selector"
-                android:fontFamily="@font/lato"
-                android:paddingStart="@dimen/_16sdp"
-                android:paddingTop="@dimen/_8sdp"
-                android:paddingEnd="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_8sdp"
-                android:text="Tambah Produk"
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/btnSimpanProduk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:background="@drawable/custom_button_background_selector"
-                android:fontFamily="@font/lato"
-                android:paddingStart="@dimen/_16sdp"
-                android:paddingTop="@dimen/_8sdp"
-                android:paddingEnd="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_8sdp"
-                android:text="Simpan Produk"
-                android:textColor="@color/white" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_productInDeposit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_16sdp"
-                tools:listitem="@layout/item_product_in_deposit" />
-
-        </LinearLayout>
+    </LinearLayout>
 
 
 </layout>
