--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -6,37 +6,38 @@
 
         <variable
             name="args"
-            type="com.example.konsinyasiapp.ui.shop.DetailShopFragmentArgs"/>
+            type="com.example.konsinyasiapp.ui.shop.DetailShopFragmentArgs" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_8sdp"
-        app:cardCornerRadius="@dimen/_16sdp"
-        app:cardElevation="@dimen/_8sdp">
+        app:cardBackgroundColor="#344955"
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="@dimen/_8sdp"
+        app:cardMaxElevation="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/_16sdp"
-            android:background="@drawable/card_background">
+            android:padding="@dimen/_16sdp">
 
             <TextView
                 android:id="@+id/tv_shop_name_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
                 android:text="@{args.currentItem.name}"
-                android:textSize="@dimen/_20ssp"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:fontFamily="@font/lato" />
+                android:textSize="@dimen/_18ssp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_2sdp"
-                android:background="@drawable/divider" />
+                android:layout_marginTop="@dimen/_3sdp"
+                android:background="@color/white" />
 
             <LinearLayout
                 android:id="@+id/alamat_shop_detail"
@@ -57,10 +58,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:fontFamily="@font/lato"
                     android:text="@{args.currentItem.address}"
-                    android:textSize="@dimen/_16ssp"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/lato" />
+                    android:textSize="@dimen/_14ssp" />
 
             </LinearLayout>
 
@@ -83,10 +85,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:fontFamily="@font/lato"
                     android:text="@{args.currentItem.ownerName}"
-                    android:textSize="@dimen/_16ssp"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/lato" />
+                    android:textSize="@dimen/_14ssp" />
 
             </LinearLayout>
 
@@ -109,10 +112,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:fontFamily="@font/lato"
                     android:text="@{args.currentItem.phoneNumber}"
-                    android:textSize="@dimen/_16ssp"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/lato" />
+                    android:textSize="@dimen/_14ssp" />
 
             </LinearLayout>
 
