--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -34,7 +34,7 @@
             android:layout_below="@id/no_data_imageView"
             android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/_16sdp"
-            android:text="Tidak Ada Produk"
+            android:text="@string/tidak_ada_produk"
             android:textSize="@dimen/_16ssp"
             android:visibility="invisible" />
 
@@ -53,7 +53,7 @@
             android:focusable="true"
             android:navigateToAddProductFragment="@{true}"
             android:onClick="onFabClick"
-            android:text="Tambah Produk"
+            android:text="@string/tambah_produk"
             android:textColor="@color/white"
             app:icon="@drawable/ic_add"
             app:iconTint="@color/white" />
