--- a/app/src/main/res/menu/product_menu.xml
+++ b/app/src/main/res/menu/product_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_delete"
-        android:title="Delete" />
+        android:title="Hapus" />
 
 
 </menu>
