--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -57,6 +57,24 @@
         <argument
             android:name="currentItem"
             app:argType="com.example.konsinyasiapp.entities.DepositWithShop" />
+        <action
+            android:id="@+id/action_depositDetail_to_rincian_deposit"
+            app:destination="@id/rincian_deposit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/rincian_deposit"
+        android:name="com.example.konsinyasiapp.ui.deposit.RincianDepositFragment"
+        android:label="Rincian Deposit"
+        tools:layout="@layout/fragment_rincian_deposit">
+
+        <argument
+            android:name="idDeposit"
+            app:argType="long" />
+        <argument
+            android:name="currentItem"
+            app:argType="com.example.konsinyasiapp.entities.DepositWithShop" />
+
     </fragment>
 
     <fragment
