--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
     <color name="divider_color">#FFFFFF</color>
     <color name="primary_text_color">#000000</color>
     <color name="secondary_text_color">#808080</color>
+
+    <color name="button">#1E8A8A</color>
+
 </resources>
